# InsuranceCalc

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  seed.json
deploy/: docker-compose.dev.yml
insurance_calc/: __init__.py  __main__.py  gunicorn_runner.py  log.py  pre_start.py  settings.py
insurance_calc/db/: base.py  utils.py
insurance_calc/db/dao/: dummy_dao.py
insurance_calc/db/migrations/: env.py
insurance_calc/db/migrations/versions/: 2024-12-02-16-50_001.py
insurance_calc/db/models/: __init__.py  dummy_model.py  insurance.py  user.py
insurance_calc/services/: __init__.py
insurance_calc/services/kafka/: lifespan.py  utils.py
insurance_calc/services/redis/: lifespan.py
insurance_calc/utils/: auth.py  common.py  schema.py
insurance_calc/web/: __init__.py  application.py  lifespan.py
insurance_calc/web/api/: __init__.py  base.py  router.py
insurance_calc/web/api/auth/: __init__.py  schema.py  service.py  views.py
insurance_calc/web/api/dummy/: __init__.py  views.py
insurance_calc/web/api/echo/: __init__.py  views.py
insurance_calc/web/api/insurance/: __init__.py  schema.py  service.py  views.py
insurance_calc/web/api/kafka/: __init__.py  views.py
insurance_calc/web/api/monitoring/: __init__.py
insurance_calc/web/api/redis/: __init__.py  views.py
tests/: __init__.py  conftest.py  test_dummy.py  test_kafka.py
